@startuml Item

abstract class ItemData
{

}

abstract class ItemBase
{
    ItemData data
}

abstract class ConsumableItemBase
{

}

abstract class WeaponItemBase
{

}

abstract class GunItemBase
{

}

class BombItem
{

}

class HealItem
{

}

class ShieldItem
{

}

class SniperItem
{

}

class SprayGunItem
{

}

class LaserGunItem
{

}

class MachineGunItem
{

}

class PistolItem
{

}
ItemBase <|-- ConsumableItemBase
ItemBase <|-- WeaponItemBase

ItemBase *-- ItemData

ConsumableItemBase <|-- BombItem
ConsumableItemBase <|-- HealItem
ConsumableItemBase <|-- ShieldItem

WeaponItemBase <|-- GunItemBase

GunItemBase <|-- PistolItem
GunItemBase <|-- SniperItem
GunItemBase <|-- MachineGunItem
GunItemBase <|-- SprayGunItem
GunItemBase <|-- LaserGunItem

@enduml